[tool.poetry]
name = "hana-work"
version = "0.1.0"
description = ""
authors = ["yomon8 <sebanngou8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
hdbcli = "^2.18.24"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pandas = "^2.1.2"
sqlalchemy-hana = "^0.5.0"

[tool.mypy]
plugins = [ "pydantic.mypy" ]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
types-hdbcli = "^2.18.0.0"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
pandas-stubs = "^2.1.1.230928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
